--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js --stats-children",
+    "build": "webpack --config webpack.config.js --stats-children && make compile_static",
     "watch": "webpack --watch --config webpack.config.js",
-    "start": "webpack serve --open --config webpack.config.js"
+    "start": "npm run build && webpack serve --open --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.23.5",
+    "@babel/plugin-transform-react-jsx": "^7.23.4",
     "@babel/preset-env": "^7.23.5",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^11.0.0",
@@ -36,8 +37,10 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.23.4",
+    "@babel/preset-react": "^7.23.3",
     "@babel/preset-stage-2": "^7.8.3",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "jquery": "^3.7.1",
     "keycode": "^2.2.1",
     "local-storage-manager": "git://github.com/ejb/localStorageManager.git",
