--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js --stats-children && make build_prod",
     "watch": "webpack --watch --config webpack.config.js",
-    "start": "npm run build && make build_dev && webpack serve --open --config webpack.config.js"
+    "start": "npm run build && make build_dev && webpack serve --open --config webpack.config.js --hot"
   },
   "keywords": [],
   "author": "",
